# natKit

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  build.sh  client.env  docker-compose.yml  natKit.py  notes_for_esp32.txt  requirements.txt  setup.sh  test_runner.py
.github/workflows/: main.yml
examples/: eyes_open_shut_task.py  graph_muse_example.py  imu_data_collection.py  imu_multi_stage.py  imu_task.py  oddball_task.py
examples/imu_experiment/: imu_data_collection_task.py  imu_experiment.py  imu_query_task.py  imu_setup_task.py
examples/imu_experiment/src/tasks/: __init__.py  imu_data_collection_task.py  imu_query_task.py  imu_setup_task.py
examples/imu_experiment/src/util/: __init__.py  imu_calibration_status.py  imu_connection_status.py  imu_streams.py  point.py
examples/imu_experiment/src/widgets/: __init__.py  imu_calibration_widget.py  imu_connection_widget.py  imu_image_widget.py  imu_plot_widget.py  imu_sound_effect.py  setup_task_widget.py
natKit/: __init__.py  architechture.adoc
natKit/api/src/json/: MetaSchema.json
natKit/api/src/proto/natKit/api/: schema.proto
natKit/common/: CMakeLists.txt
natKit/common/src/cxx/natKit/common/kafka/: topic.hpp
natKit/common/src/cxx/natKit/common/util/: result.hpp  toString.hpp
natKit/common/src/python/natKit/common/board/: __init__.py  board_builder.py  brain_flow_board.py  exg_pill.py  muse_2.py
natKit/common/src/python/natKit/common/connector/: serial.py
natKit/common/src/python/natKit/common/kafka/: __init__.py  data_message.py  kafka_manager_helper.py  messenger.py  stream.py  stream_watcher.py  topic.py  topic_connection.py  topic_manager.py
natKit/common/src/python/natKit/common/stream/: __init__.py  data_stream.py  file_stream.py  serial_stream.py  std_stream.py  stream.py  stream_builder.py
natKit/common/src/python/natKit/common/util/: __init__.py  fifo.py  global_variables.py  point.py  result.py  type_conversion.py
natKit/common/test/cxx/natKit/common/kafka/: topicTest.cpp
natKit/common/test/cxx/natKit/common/util/: resultTest.cpp  toStringTest.cpp
natKit/common/test/python/natKit/common/board/: test_exg_pill.py
natKit/common/test/python/natKit/common/kafka/: kafka_manager_test.py  test_stream.py  topic_connection_test.py  topic_test.py
natKit/common/test/python/natKit/common/util/: test_fifo.py  test_result.py  test_type_conversion.py
natKit/server/: CMakeLists.txt  docker-compose.yml  main.cpp
natKit/server/src/cxx/natKit/server/: CMakeLists.txt  KafkaConnection.hpp  KafkaManager.hpp
src/board/: board.py  board_builder.py  brain_flow_board.py  exg_pill.py  muse_2.py
src/connector/: serial.py
src/core/: argument_parser.py  commands.py
src/data/board/: supported.py
src/data/stream/: supported.py
src/gui/widget/: graph_widget.py  widget.py
src/gui/window/: fifo.py  graph.py  window.py
src/stream/: data_stream.py  file_stream.py  serial_stream.py  std_stream.py  stream.py  stream_builder.py
src/transform/: fft.py  transform.py
src/utility/: fifo.py  result.py  type_conversion.py
test/board/: test_exg_pill.py
test/utility/: test_fifo.py  test_result.py  test_type_conversion.py
(+58 files in other folders)
